added method to fetch the data

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -10,24 +10,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6af3e56d-77d1-40ac-bdcc-538c21abf43f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import arxiv\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from typing import List"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e6d74b9-1cae-48fb-ad34-5f943a4d8527",
+   "execution_count": 2,
+   "id": "7e875103-ec29-4165-984e-ce2c4abb133e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# constants\n",
+    "queries = [\n",
+    "    'automl', 'machinelearning', 'data', 'phyiscs','mathematics', 'recommendation system', 'nlp', 'neural networks'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afca02b4-3cc9-4bc5-9f1f-4c5a9e1e0166",
+   "metadata": {},
+   "source": [
+    "# Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "71fbc053-3bd7-4747-924b-7ce384ea417c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_arxiv(queries: List[str], max_results: int = 100) -> pd.DataFrame:\n",
+    "    '''\n",
+    "    This function will search arxiv associated to a set of queries and store\n",
+    "    the latest 10000 (max_results) associated to that search.\n",
+    "    \n",
+    "    params:\n",
+    "        queries (List -> Str) : A list of strings containing keywords you want\n",
+    "                                to search on Arxiv\n",
+    "        max_results (Int) : The maximum number of results you want to see associated\n",
+    "                            to your search. Default value is 1000, capped at 300000\n",
+    "                            \n",
+    "    returns:\n",
+    "        This function will return a DataFrame holding the following columns associated\n",
+    "        to the queries the user has passed. \n",
+    "            `title`, `date`, `article_id`, `url`, `main_topic`, `all_topics`\n",
+    "    \n",
+    "    example:\n",
+    "        research_df = search_arxiv(\n",
+    "            queries = ['automl', 'recommender system', 'nlp', 'data science'],\n",
+    "            max_results = 10000\n",
+    "        )\n",
+    "    '''\n",
+    "    d = []\n",
+    "    searches = []\n",
+    "    # hitting the API\n",
+    "    for query in queries:\n",
+    "        search = arxiv.Search(\n",
+    "          query = query,\n",
+    "          max_results = max_results,\n",
+    "          sort_by = arxiv.SortCriterion.SubmittedDate,\n",
+    "          sort_order = arxiv.SortOrder.Descending\n",
+    "        )\n",
+    "        searches.append(search)\n",
+    "    \n",
+    "    # Converting search result into df\n",
+    "    for search in searches:\n",
+    "        for res in search.results():\n",
+    "            data = {\n",
+    "                'title' : res.title,\n",
+    "                'date' : res.published,\n",
+    "                'article_id' : res.entry_id,\n",
+    "                'url' : res.pdf_url,\n",
+    "                'main_topic' : res.primary_category,\n",
+    "                'all_topics' : res.categories,\n",
+    "                'authors' : res.authors\n",
+    "            }\n",
+    "            d.append(data)\n",
+    "        \n",
+    "    d = pd.DataFrame(d)\n",
+    "    d['year'] = pd.DatetimeIndex(d['date']).year\n",
+    "    \n",
+    "    # change article id from url to integer\n",
+    "    unique_article_ids = d.article_id.unique()\n",
+    "    article_mapping = {art:idx for idx,art in enumerate(unique_article_ids)}\n",
+    "    d['article_id'] = d['article_id'].map(article_mapping)\n",
+    "    return d\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f0f6b598-b93d-405a-8d44-f8c02cde8ff2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(647, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fetch data from arXiv\n",
+    "research_df = search_arxiv(\n",
+    "    queries = queries,\n",
+    "    max_results = 100\n",
+    ")\n",
+    "print(research_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "238f0c53-f268-44f5-be58-81b9017f1396",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Multi-objective Tree-structured Parzen Estimat...</td>\n",
+       "      <td>2022-12-13 17:33:02+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.06751v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POPNASv3: a Pareto-Optimal Neural Architecture...</td>\n",
+       "      <td>2022-12-13 17:14:14+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.06735v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI, cs.CV, cs.NE]</td>\n",
+       "      <td>[Andrea Falanti, Eugenio Lomurno, Danilo Ardag...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AutoPINN: When AutoML Meets Physics-Informed N...</td>\n",
+       "      <td>2022-12-08 03:44:08+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.04058v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Benchmarking AutoML algorithms on a collection...</td>\n",
+       "      <td>2022-12-06 01:53:50+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.02704v2</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Pedro Henrique Ribeiro, Patryk Orzechowski, J...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NAS-LID: Efficient Neural Architecture Search ...</td>\n",
+       "      <td>2022-11-23 08:08:17+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>http://arxiv.org/pdf/2211.12759v2</td>\n",
+       "      <td>cs.CV</td>\n",
+       "      <td>[cs.CV, cs.AI, cs.LG]</td>\n",
+       "      <td>[Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...</td>\n",
+       "      <td>2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Multi-objective Tree-structured Parzen Estimat...   \n",
+       "1  POPNASv3: a Pareto-Optimal Neural Architecture...   \n",
+       "2  AutoPINN: When AutoML Meets Physics-Informed N...   \n",
+       "3  Benchmarking AutoML algorithms on a collection...   \n",
+       "4  NAS-LID: Efficient Neural Architecture Search ...   \n",
+       "\n",
+       "                       date  article_id                                url  \\\n",
+       "0 2022-12-13 17:33:02+00:00           0  http://arxiv.org/pdf/2212.06751v1   \n",
+       "1 2022-12-13 17:14:14+00:00           1  http://arxiv.org/pdf/2212.06735v1   \n",
+       "2 2022-12-08 03:44:08+00:00           2  http://arxiv.org/pdf/2212.04058v1   \n",
+       "3 2022-12-06 01:53:50+00:00           3  http://arxiv.org/pdf/2212.02704v2   \n",
+       "4 2022-11-23 08:08:17+00:00           4  http://arxiv.org/pdf/2211.12759v2   \n",
+       "\n",
+       "  main_topic                    all_topics  \\\n",
+       "0      cs.LG                [cs.LG, cs.AI]   \n",
+       "1      cs.LG  [cs.LG, cs.AI, cs.CV, cs.NE]   \n",
+       "2      cs.LG                [cs.LG, cs.AI]   \n",
+       "3      cs.LG                       [cs.LG]   \n",
+       "4      cs.CV         [cs.CV, cs.AI, cs.LG]   \n",
+       "\n",
+       "                                             authors  year  \n",
+       "0  [Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...  2022  \n",
+       "1  [Andrea Falanti, Eugenio Lomurno, Danilo Ardag...  2022  \n",
+       "2  [Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...  2022  \n",
+       "3  [Pedro Henrique Ribeiro, Patryk Orzechowski, J...  2022  \n",
+       "4  [Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...  2022  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e875103-ec29-4165-984e-ce2c4abb133e",
+   "id": "cd046c4f-9ae6-447c-9527-363fae030826",
    "metadata": {},
    "outputs": [],
    "source": []
