added the breakdown for the notebook'

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -40,7 +40,7 @@
    "id": "afca02b4-3cc9-4bc5-9f1f-4c5a9e1e0166",
    "metadata": {},
    "source": [
-    "# Load Data"
+    "## Load Data"
    ]
   },
   {
@@ -268,12 +268,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "84f41b0a-4de7-46c3-88f3-a62d24c4a539",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b7cd59-9206-44bd-b2bb-7190417da5aa",
+   "id": "95118db5-8358-46db-ad38-90a67f6550a3",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c86a124-6d40-4d3a-b963-5c0e600a4c45",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dffad1e0-9a4d-49b1-b4bb-6c3cf9a64d0e",
+   "metadata": {},
+   "source": [
+    "# Unsupervised Learning - Topic Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7757ddbd-1ea9-43a2-9acc-5516e22bdba4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceb86fd1-5968-466a-bb71-08b1a8419857",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8115626-2e15-4348-b283-94ec8d1afd5e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba73e197-2cd0-405d-8891-0f02847f43a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a22604b1-0948-4a5c-9159-f140e60580ed",
+   "metadata": {},
+   "source": [
+    "# Supervised Learning - Topic Modelling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7021f1c7-be7e-4082-a8e7-c825922cfd13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9662ca63-b0ec-47a9-a733-d09d9f8381ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef479b34-0487-4938-83f1-ea63aa3290b8",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afbd9920-64df-400a-b73b-4afda59893e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98bc1389-a453-402f-9e2d-a085a62541cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb54da1a-e340-412a-a043-16f9a2160dc0",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
