added methods for data cleaning

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -16,10 +16,20 @@
    "outputs": [],
    "source": [
     "import arxiv\n",
+    "import string\n",
+    "import unidecode\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from typing import List"
+    "from typing import List\n",
+    "\n",
+    "try:\n",
+    "    from nltk.corpus import stopwords\n",
+    "except:\n",
+    "    import nltk\n",
+    "    nltk.download('stopwords')\n",
+    "finally:\n",
+    "    from nltk.corpus import stopwords"
    ]
   },
   {
@@ -277,19 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "95118db5-8358-46db-ad38-90a67f6550a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_stopwords():\n",
-    "    raise NotImplemented\n",
+    "def remove_stopwords(text: str, sw: List[str] = stopwords) -> str:\n",
+    "    '''\n",
+    "    This function will remove stopwords from the text\n",
+    "    '''\n",
+    "    return [word for word in text.split() if word not in stopwords.words('english')]\n",
     "    \n",
-    "def remove_punct():\n",
-    "    raise NotImplemented\n",
+    "def remove_punctuation(text: str) -> str:\n",
+    "    '''\n",
+    "    This function will remove punctuations from the text\n",
+    "    '''\n",
+    "    cleaned_text = ''.join([char for char in text if char not in string.punctuation])\n",
+    "    return cleaned_text\n",
     "    \n",
-    "def unidecode():\n",
-    "    raise NotImplemented\n",
+    "def unicode(text: str) -> str:\n",
+    "    '''\n",
+    "    This function will make all the data unicoded\n",
+    "    '''\n",
+    "    return unidecode.unidecode(name)\n",
     "    \n",
     "def clean():\n",
     "    raise NotImplemented"
