added clean method for data cleaning "

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -103,6 +103,7 @@
     "                'article_id' : res.entry_id,\n",
     "                'url' : res.pdf_url,\n",
     "                'main_topic' : res.primary_category,\n",
+    "                'summary' : res.summary,\n",
     "                'all_topics' : res.categories,\n",
     "                'authors' : res.authors\n",
     "            }\n",
@@ -128,7 +129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(647, 8)\n"
+      "(647, 9)\n"
      ]
     }
    ],
@@ -173,6 +174,7 @@
        "      <th>article_id</th>\n",
        "      <th>url</th>\n",
        "      <th>main_topic</th>\n",
+       "      <th>summary</th>\n",
        "      <th>all_topics</th>\n",
        "      <th>authors</th>\n",
        "      <th>year</th>\n",
@@ -186,6 +188,7 @@
        "      <td>0</td>\n",
        "      <td>http://arxiv.org/pdf/2212.06751v1</td>\n",
        "      <td>cs.LG</td>\n",
+       "      <td>Hyperparameter optimization (HPO) is essential...</td>\n",
        "      <td>[cs.LG, cs.AI]</td>\n",
        "      <td>[Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...</td>\n",
        "      <td>2022</td>\n",
@@ -197,6 +200,7 @@
        "      <td>1</td>\n",
        "      <td>http://arxiv.org/pdf/2212.06735v1</td>\n",
        "      <td>cs.LG</td>\n",
+       "      <td>The automated machine learning (AutoML) field ...</td>\n",
        "      <td>[cs.LG, cs.AI, cs.CV, cs.NE]</td>\n",
        "      <td>[Andrea Falanti, Eugenio Lomurno, Danilo Ardag...</td>\n",
        "      <td>2022</td>\n",
@@ -208,6 +212,7 @@
        "      <td>2</td>\n",
        "      <td>http://arxiv.org/pdf/2212.04058v1</td>\n",
        "      <td>cs.LG</td>\n",
+       "      <td>Physics-Informed Neural Networks (PINNs) have ...</td>\n",
        "      <td>[cs.LG, cs.AI]</td>\n",
        "      <td>[Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...</td>\n",
        "      <td>2022</td>\n",
@@ -219,6 +224,7 @@
        "      <td>3</td>\n",
        "      <td>http://arxiv.org/pdf/2212.02704v2</td>\n",
        "      <td>cs.LG</td>\n",
+       "      <td>Automated machine learning (AutoML) algorithms...</td>\n",
        "      <td>[cs.LG]</td>\n",
        "      <td>[Pedro Henrique Ribeiro, Patryk Orzechowski, J...</td>\n",
        "      <td>2022</td>\n",
@@ -230,6 +236,7 @@
        "      <td>4</td>\n",
        "      <td>http://arxiv.org/pdf/2211.12759v2</td>\n",
        "      <td>cs.CV</td>\n",
+       "      <td>One-shot neural architecture search (NAS) subs...</td>\n",
        "      <td>[cs.CV, cs.AI, cs.LG]</td>\n",
        "      <td>[Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...</td>\n",
        "      <td>2022</td>\n",
@@ -253,12 +260,19 @@
        "3 2022-12-06 01:53:50+00:00           3  http://arxiv.org/pdf/2212.02704v2   \n",
        "4 2022-11-23 08:08:17+00:00           4  http://arxiv.org/pdf/2211.12759v2   \n",
        "\n",
-       "  main_topic                    all_topics  \\\n",
-       "0      cs.LG                [cs.LG, cs.AI]   \n",
-       "1      cs.LG  [cs.LG, cs.AI, cs.CV, cs.NE]   \n",
-       "2      cs.LG                [cs.LG, cs.AI]   \n",
-       "3      cs.LG                       [cs.LG]   \n",
-       "4      cs.CV         [cs.CV, cs.AI, cs.LG]   \n",
+       "  main_topic                                            summary  \\\n",
+       "0      cs.LG  Hyperparameter optimization (HPO) is essential...   \n",
+       "1      cs.LG  The automated machine learning (AutoML) field ...   \n",
+       "2      cs.LG  Physics-Informed Neural Networks (PINNs) have ...   \n",
+       "3      cs.LG  Automated machine learning (AutoML) algorithms...   \n",
+       "4      cs.CV  One-shot neural architecture search (NAS) subs...   \n",
+       "\n",
+       "                     all_topics  \\\n",
+       "0                [cs.LG, cs.AI]   \n",
+       "1  [cs.LG, cs.AI, cs.CV, cs.NE]   \n",
+       "2                [cs.LG, cs.AI]   \n",
+       "3                       [cs.LG]   \n",
+       "4         [cs.CV, cs.AI, cs.LG]   \n",
        "\n",
        "                                             authors  year  \n",
        "0  [Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...  2022  \n",
@@ -287,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "95118db5-8358-46db-ad38-90a67f6550a3",
    "metadata": {},
    "outputs": [],
@@ -296,7 +310,7 @@
     "    '''\n",
     "    This function will remove stopwords from the text\n",
     "    '''\n",
-    "    return [word for word in text.split() if word not in stopwords.words('english')]\n",
+    "    return ' '.join([word for word in text.split() if word not in stopwords.words('english')])\n",
     "    \n",
     "def remove_punctuation(text: str) -> str:\n",
     "    '''\n",
@@ -309,10 +323,204 @@
     "    '''\n",
     "    This function will make all the data unicoded\n",
     "    '''\n",
-    "    return unidecode.unidecode(name)\n",
+    "    return unidecode.unidecode(text)\n",
     "    \n",
-    "def clean():\n",
-    "    raise NotImplemented"
+    "def clean(text: str) -> str:\n",
+    "    '''\n",
+    "    This method will clean the input text through unidecoding and stopword and punctuation \n",
+    "    removal.\n",
+    "    \n",
+    "    Args:\n",
+    "        text: String indicating the body of text you want to clean\n",
+    "    \n",
+    "    Returns:\n",
+    "        A string corresponding to the cleaned version of the input string.\n",
+    "    '''\n",
+    "    text = unicode(text)\n",
+    "    text = remove_punctuation(text)\n",
+    "    text = remove_stopwords(text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "717eb255-71c3-4287-9175-ea652410148d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.84 s, sys: 732 ms, total: 4.57 s\n",
+      "Wall time: 4.58 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time research_df['cleaned_summary'] = research_df['summary'].apply(clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a47deda2-19b0-493a-afd5-8d5824149863",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>article_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>main_topic</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>all_topics</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>year</th>\n",
+       "      <th>cleaned_summary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Multi-objective Tree-structured Parzen Estimat...</td>\n",
+       "      <td>2022-12-13 17:33:02+00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.06751v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>Hyperparameter optimization (HPO) is essential...</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Hyperparameter optimization HPO essential bett...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POPNASv3: a Pareto-Optimal Neural Architecture...</td>\n",
+       "      <td>2022-12-13 17:14:14+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.06735v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>The automated machine learning (AutoML) field ...</td>\n",
+       "      <td>[cs.LG, cs.AI, cs.CV, cs.NE]</td>\n",
+       "      <td>[Andrea Falanti, Eugenio Lomurno, Danilo Ardag...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>The automated machine learning AutoML field be...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AutoPINN: When AutoML Meets Physics-Informed N...</td>\n",
+       "      <td>2022-12-08 03:44:08+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.04058v1</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>Physics-Informed Neural Networks (PINNs) have ...</td>\n",
+       "      <td>[cs.LG, cs.AI]</td>\n",
+       "      <td>[Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>PhysicsInformed Neural Networks PINNs recently...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Benchmarking AutoML algorithms on a collection...</td>\n",
+       "      <td>2022-12-06 01:53:50+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>http://arxiv.org/pdf/2212.02704v2</td>\n",
+       "      <td>cs.LG</td>\n",
+       "      <td>Automated machine learning (AutoML) algorithms...</td>\n",
+       "      <td>[cs.LG]</td>\n",
+       "      <td>[Pedro Henrique Ribeiro, Patryk Orzechowski, J...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Automated machine learning AutoML algorithms g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NAS-LID: Efficient Neural Architecture Search ...</td>\n",
+       "      <td>2022-11-23 08:08:17+00:00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>http://arxiv.org/pdf/2211.12759v2</td>\n",
+       "      <td>cs.CV</td>\n",
+       "      <td>One-shot neural architecture search (NAS) subs...</td>\n",
+       "      <td>[cs.CV, cs.AI, cs.LG]</td>\n",
+       "      <td>[Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>Oneshot neural architecture search NAS substan...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Multi-objective Tree-structured Parzen Estimat...   \n",
+       "1  POPNASv3: a Pareto-Optimal Neural Architecture...   \n",
+       "2  AutoPINN: When AutoML Meets Physics-Informed N...   \n",
+       "3  Benchmarking AutoML algorithms on a collection...   \n",
+       "4  NAS-LID: Efficient Neural Architecture Search ...   \n",
+       "\n",
+       "                       date  article_id                                url  \\\n",
+       "0 2022-12-13 17:33:02+00:00           0  http://arxiv.org/pdf/2212.06751v1   \n",
+       "1 2022-12-13 17:14:14+00:00           1  http://arxiv.org/pdf/2212.06735v1   \n",
+       "2 2022-12-08 03:44:08+00:00           2  http://arxiv.org/pdf/2212.04058v1   \n",
+       "3 2022-12-06 01:53:50+00:00           3  http://arxiv.org/pdf/2212.02704v2   \n",
+       "4 2022-11-23 08:08:17+00:00           4  http://arxiv.org/pdf/2211.12759v2   \n",
+       "\n",
+       "  main_topic                                            summary  \\\n",
+       "0      cs.LG  Hyperparameter optimization (HPO) is essential...   \n",
+       "1      cs.LG  The automated machine learning (AutoML) field ...   \n",
+       "2      cs.LG  Physics-Informed Neural Networks (PINNs) have ...   \n",
+       "3      cs.LG  Automated machine learning (AutoML) algorithms...   \n",
+       "4      cs.CV  One-shot neural architecture search (NAS) subs...   \n",
+       "\n",
+       "                     all_topics  \\\n",
+       "0                [cs.LG, cs.AI]   \n",
+       "1  [cs.LG, cs.AI, cs.CV, cs.NE]   \n",
+       "2                [cs.LG, cs.AI]   \n",
+       "3                       [cs.LG]   \n",
+       "4         [cs.CV, cs.AI, cs.LG]   \n",
+       "\n",
+       "                                             authors  year  \\\n",
+       "0  [Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...  2022   \n",
+       "1  [Andrea Falanti, Eugenio Lomurno, Danilo Ardag...  2022   \n",
+       "2  [Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...  2022   \n",
+       "3  [Pedro Henrique Ribeiro, Patryk Orzechowski, J...  2022   \n",
+       "4  [Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...  2022   \n",
+       "\n",
+       "                                     cleaned_summary  \n",
+       "0  Hyperparameter optimization HPO essential bett...  \n",
+       "1  The automated machine learning AutoML field be...  \n",
+       "2  PhysicsInformed Neural Networks PINNs recently...  \n",
+       "3  Automated machine learning AutoML algorithms g...  \n",
+       "4  Oneshot neural architecture search NAS substan...  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "research_df.head()"
    ]
   },
   {
